@@ -12,7 +12,7 @@ loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_id=tolaserblade
-mod_version=10.0.0
+mod_version=10.1.0-alpha.1
 maven_group=com.github.iunius118.tolaserblade
 archives_base_name=ToLaserBlade-fabric
 
